_sass/pages/_about-us.scss
/*=============================
 ABOUT US PAGE STARTS HERE
=============================*/
.story-page {
    font-family: $font-main;
    padding-top: 2.7%;
    .our-model-section {
        background: linear-gradient(#675D83, #463f60);
        height: 100vh;
        .text-wrapper { 
            text-align: center;
            padding-top: 30vh;
            h1 {
                font-size: 60px;
                color: #fff;
            }
            h2 {
		font-weight: 300;
                color: #B2A8BA;
                font-size: 22px;
                line-height: 1.6;
                font-family: $font-main;
                padding-bottom: 6vh;
                padding-top: 3em;
                
            }
        }
        .subsection-buttons {
            #buttons {
                padding: 20px 50px;
                h2 {
                    text-align: center;
                    padding: 20px;
                    font-size: 2vmax;
                    color: white;
                    width: 100%;
                    height: 60px;
                    border-radius: 0;
                    border: none;

                }
                span {
                    padding-left: 5%;
                }            
                h2:hover {
                    background-color: #78b7bb
                }
                a:hover {
                    text-decoration: none;
                }
                
            }
        }
    }
    .timeline-container {
        height: 100%;
        background-color: $turquise;
        padding: 20vh 5vw;
        .title-timeline {
            text-align: center;
            h1 {
                font-family: $font-secondary;
                padding-bottom: 10vh;
                font-size: 7vw;
                font-weight: 400;
                color: #fff;
            }
        }
        .timeline {
            list-style: none;
            padding: 20px 0 20px;
            position: relative;
            li {
                margin-bottom: 25px;
                position: relative;
                &:before {
                    content: " ";
                    display: table;
                }
                &:after {
                    content: " ";
                    display: table;
                    clear: both;
                }
                .timeline-panel {
                    width: 46%;
                    float: left;
                    background: #fff;
                    border: 1px solid #d4d4d4;
                    padding: 20px;
                    position: relative;
                    border-radius: 8px;
                    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.15);
                    &:before {
                        position: absolute;
                        top: 26px;
                        right: -15px;
                        display: inline-block;
                        border-top: 15px solid transparent;
                        border-left: 15px solid #ccc;
                        border-right: 0 solid #ccc;
                        border-bottom: 15px solid transparent;
                        content: " ";
                    }
                    &:after {
                        position: absolute;
                        top: 27px;
                        right: -14px;
                        display: inline-block;
                        border-top: 14px solid transparent;
                        border-left: 14px solid #fff;
                        border-right: 0 solid #fff;
                        border-bottom: 14px solid transparent;
                        content: " ";
                    }
                    .tl-heading {
                        h4 {
                            text-align: center;
                            margin: 0;
                            padding-bottom: 10px;
                            font-size: 3vw;
                            color: $turquise;
                            font-weight: 600;
                        }
                    }
                    .tl-body {
                        p {
                            margin-bottom: 0;
                            text-align: justify;
                            color: $dark-indigo;
                        }
                    }
                }
            }
            .tl-circ {
                position: absolute;
                top: 23px;
                left: 50%;
                text-align: center;
                background: $turquise;
                color: #eee;
                width: 35px;
                height: 35px;
                line-height: 35px;
                margin-left: -16px;
                border: 5px #eee solid;
                border-radius: 100%;
                z-index: 1;
            }
            .timeline-inverted {
                .timeline-panel {
                    float: right;
                    &:before {
                        border-left-width: 0;
                        border-right-width: 15px;
                        left: -15px;
                        right: auto;
                    }
                    &:after {
                        border-left-width: 0;
                        border-right-width: 14px;
                        left: -14px;
                        right: auto;
                    }
                }
            }
            &:before {
                top: 0;
                bottom: 0;
                position: absolute;
                content: " ";
                width: 5px;
                background-color: #eee;
                left: 50%;
                margin-left: -1.5px;
            }
        }
    }

    .meet-the-team {
        background: linear-gradient(#463f60, $dark-indigo);
        height: 100%;
        padding-bottom: 15vh;
        h2 {
            color: #DDD;
            font-size: 6vw;
            text-align: center;
            padding-bottom: 5vh;
            padding-top: 15vh;
        }
        .selfie {
            text-align: center;
            img {
                border-radius: 100%;
                width: 75%;
                -webkit-filter: grayscale(40%);
                transition: all 1s ease-in-out;
            }
            img:hover {
                -webkit-filter: grayscale(10%);
            }
            h3 {
                margin-top: 2vh;
                margin-bottom: 5vh;
                color: #fff;
                font-size: 20px;
            }
        }
    }
}

/*==========================
    ABOUT US PAGE MOBILE
===========================*/

@media (max-width: 767px) {

    .story-page {
        .our-model-section {
                background-color: #27285a;
                color: #fff;
                font: $font-main;
                height: 100vh;
                padding-top: 0;
                .text-wrapper { 
                    padding-top: 15vh;
                    h1 {
                        font-size: 8vw;
                        padding: 0;
                    }
                    h2 {
                        padding-top: 2em;
                        font-size: 4vw;
                        line-height: 1.5;
                    }
                }
                .subsection-buttons {
                #buttons {
                    padding: 0;
                    border: 1px #81d0d7 solid;
                    margin: 5px;
                    h2 {
                        font-size: 3vmax;
                    }               
                }
            }
        }

  .timeline-container {
            padding: 15vh 5vw 15vw 0;
            .title-timeline {
                h1 {
                    font-size: 8vw;
                }
            }
            .timeline {
                li {
                    &:before {
                        
                    }
                    &:after {
                    }
                    .timeline-panel {
                        width: calc(100% - 90px);
                        float: right;
                        &:before {
                            border-left-width: 0;
                            border-right-width: 15px;
                            left: -15px;
                            right: auto;
                        }
                        &:after {
                            border-left-width: 0;
                            border-right-width: 14px;
                            left: -14px;
                            right: auto;
                        }
                        .tl-heading {
                            h4 {
                                font-size: 5vw;
                            }
                        }
                        .tl-body {
                            p {
                               font-size: 3.5vw;
                            }
                        }
                    }
                }
                .tl-circ {
                    top: 22px;
                    left: 22px;
                    margin-left: 0;
                }
                .timeline-inverted {
                    .timeline-panel {
                        &:before {
                        }
                        &:after {
                        }
                    }
                }
                &:before {
                    left: 40px;
                }
            }
        }


        .meet-the-team {
            background-color: #265b7d;
            height: 100%;
            padding: 0;
            h2 {
                font-size: 8vw;
                padding-bottom: 5vh;
                padding-top: 0;
            }
            .selfie {
            h3 {
                font-size: 12px;
            }
        }
        }
    }
}

